<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manner Timer</string>
    <string name="title_activity_webview">Help</string>
    <string name="action_help">Help</string>
    <string name="action_custom_time">Custom Time</string>
    <string name="label_smart_timer_deactivating">"Tap to Manner"</string>
    <string name="label_smart_timer_in_manner_vibration">"Vibration"</string>
    <string name="label_smart_timer_in_manner_silent">"Silent"</string>
    <string name="label_short_smart_timer_deactivating">"Manner Timer"</string>
    <string name="label_short_smart_timer_in_manner_vibration">"Vibration"</string>
    <string name="label_short_smart_timer_in_manner_silent">"Silent"</string>
    <string name="label_smart_timer">"Set the time to restore"</string>
    <string name="label_smart_timer_deactivate">"Cancel"</string>
    <string name="label_smart_timer_option10">"10 min later"</string>
    <string name="label_smart_timer_option30">"30 min later"</string>
    <string name="label_smart_timer_option60">"An hour later"</string>
    <string name="label_smart_timer_option90">"An hour and a half later"</string>
    <string name="label_smart_timer_option120">"2 hours later"</string>
    <string name="label_smart_timer_option150">"2 hours and a half later"</string>
    <string name="label_smart_timer_option180">"3 hours later"</string>
    <string name="label_smart_timer_option240">"4 hours later"</string>
    <string name="label_smart_timer_custom_prefix">"custom settings : "</string>
    <string name="action_custom_time_explanation">input custom time in minutes</string>
    <string name="label_smart_timer_custom_postfix">" min later"</string>
    <string name="label_smart_timer_prefix">"restore at "</string>
    <string name="label_smart_timer_postfix">""</string>
    <string name="label_manner_mode">Manner Mode Style</string>
    <string name="label_manner_vibrate">Vibration</string>
    <string name="label_manner_vibrate_no_silent">Vibration\r\n(Never Silent)</string>
    <string name="label_manner_silent">Silent</string>
    <string name="label_missed_call">You have Missed Call(s)</string>
    <string name="label_confirmed">Confirmed</string>
    <string name="url_help">"https://sites.google.com/site/hhosaka183/manner-timer-help/en"</string>
    <string name="title_activity_timer_selector_parent"></string>
    <string name="id_admob">ca-app-pub-4043672088061308/6607053271</string>
    <string name="label_notify_on_recieve_call">Notify missed call</string>
</resources>
